// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-lnPyOc dRuEYf aje-multiselect aje-multiselect--default is-medium"
  >
    <label
      class="sc-dhKdPU dbWGxZ aje-label is-auto"
      for="react-aria-:r2:"
      id="react-aria-:r3:"
    >
      label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-kAycRU sc-imWZod fTZbCr aje-btn aje-btn--dropdown sc-jXbVAB eOMUuR is-medium"
      data-focus-visible="false"
      id="react-aria-:r2:"
      type="button"
    >
      <span
        class="sc-ikkyvV aQztJ"
        id="react-aria-:r7:"
      >
        Select an option
      </span>
      <i
        aria-hidden="true"
        class="sc-dLNtp ckbTgt material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-lnPyOc dRuEYf aje-multiselect aje-multiselect--floating is-medium"
  >
    <div
      class="sc-eldOKa cVAPoZ"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
        class="sc-kAycRU sc-imWZod fTZbCr aje-btn aje-btn--dropdown sc-jXbVAB eOMUuR is-medium"
        data-focus-visible="false"
        id="react-aria-:ra:"
        type="button"
      >
        <span
          class="sc-ikkyvV aQztJ"
          id="react-aria-:rf:"
        />
        <i
          aria-hidden="true"
          class="sc-dLNtp ckbTgt material-icons is-medium"
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-dhKdPU dbWGxZ aje-label is-auto"
        for="react-aria-:ra:"
        id="react-aria-:rb:"
      >
        label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
